fix - table head sticky. overflow-x 줘야할때 fixed 로 바꾸는식으로 구현하자.

--- a/components/portfolio/inventory/collection/InventoryCollectionTable.module.css
+++ b/components/portfolio/inventory/collection/InventoryCollectionTable.module.css
@@ -1,5 +1,5 @@
 .container {
-  @apply w-full overflow-x-scroll;
+  @apply w-full overflow-x-scroll md:overflow-visible;
 }
 .table {
   @apply w-full border-y-1 border-[var(--color-border-main)] table-auto;
